# wgpu-physarum

./: Cargo.toml  README.md
src/: compute.wgsl  framework.rs  main.rs  substrate.wgsl
