[package]
name = "wgpu-physarum"
description = "Adapted from WGPU boids example."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
cfg-if = "1.0.0"
env_logger = "0.11.3"
flume = "0.11.0"
log = "0.4.21"
nanorand = "0.7.0"
pollster = "0.3.0"
web-time = "1.1.0"
wgpu = "0.19.3"
winit = "0.29.15"
png = "0.17.13"
